<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">e-VeK Mobile</string>
    <string name="content_menu_btn_settings">Einstellungen</string>
    <string name="content_menu_btn_logout">Ausloggen</string>
    <string name="action_scan_qr">Scan QR Code</string>

    <!-- Strings for LoadingConnectionFragment-->
    <string name="content_fragment_loading_connection_tv_init_connection" tools:ignore="TypographyEllipsis">Trying to initialize server connection...</string>
    <string name="content_fragment_loading_connection_tv_init_connection_auto_login" tools:ignore="TypographyEllipsis">Trying to log in user from stored user data...</string>


    <string name="desc_fragment_loading_connection_tv_init_connection">TextView showing the current process in initializing the server connection</string>
    <string name="desc_fragment_loading_connection_tv_init_connection_count">TextView showing the current try count to connect to the Server</string>

    <!-- Strings for LoginUserFragment -->
    <string name="autoFillHint_fragment_login_user_tb_login_pass">password</string>
    <string name="autoFillHint_fragment_login_user_tb_login_user">username</string>
    <string name="content_fragment_login_user_btn_login_login">Login</string>
    <string name="content_fragment_login_user_cb_login_stay_logged_in">Stay logged in</string>
    <string name="desc_fragment_login_user_tb_login_button">Login Button</string>
    <string name="desc_fragment_login_user_iv_login_err_symbol">Symbol showing, that an Error occurred</string>
    <string name="desc_fragment_login_user_ib_login_view_password">Button to show the typed password</string>
    <string name="hint_fragment_login_user_tb_login_pass">Password</string>
    <string name="hint_fragment_login_user_tb_login_user">Username</string>

    <!-- Strings for MainPageDoctor -->
    <string name="content_fragment_main_page_doctor_tv_field_transport_doc">Transportscheine</string>
    <string name="content_fragment_main_page_doctor_tv_field_transport">Fahrten</string>
    <string name="content_fragment_main_page_doctor_btn_transport_doc_create">Erstellen</string>
    <string name="content_fragment_main_page_doctor_btn_transport_doc_edit">Bearbeiten</string>
    <string name="content_fragment_main_page_doctor_btn_transport_edit">Bearbeiten</string>
    <string name="content_fragment_main_page_doctor_btn_transport_create">Erstellen</string>
    <string name="hint_fragment_main_page_doctor_btn_transport_create">Fahrt erstellen</string>
    <string name="hint_fragment_main_page_doctor_btn_transport_doc_create">Transportschein erstellen</string>
    <string name="hint_fragment_main_page_doctor_btn_transport_doc_edit">Transportschein bearbeiten</string>
    <string name="hint_fragment_main_page_doctor_btn_transport_edit">Fahrt bearbeiten</string>

    <!-- Strings for TransportDocumentEditor -->
    <string name="autofillhint_fragment_editor_transport_doc_et_service_provider">HealthcareServiceProviderId</string>
    <string name="content_fragment_editor_transport_doc_tv_patient_data">Patientendaten</string>
    <string name="content_fragment_editor_transport_doc_tv_reason">1. Grund der Beförderung</string>
    <string name="content_fragment_editor_transport_doc_tv_days_frequency">2. Behandlungstage/Behandlungsfrequenz und nächsterreichbare, geeignete Behandlungsstätte</string>
    <string name="content_fragment_editor_transport_doc_tv_type">3. Art und Ausstattung der Beförderung</string>
    <string name="content_fragment_editor_transport_doc_tv_additional">4. Begründung/Sonstiges</string>
    <string name="content_fragment_editor_transport_doc_tv_additional_info">(z.B. Datum Aufnahme Krankenhaus,
        Gewicht bei Schwergewichttransport, Wartezeit, Gemeinschaftsfahrt, Ortsangabe, wenn Beförderung nicht von/zur Wohnung stattfindet)</string>
    <string name="content_fragment_editor_transport_doc_tv_if_durational">Bei Mehrfachtransport:</string>
    <string name="content_fragment_editor_transport_doc_tv_patient_condition_info">Patientenzustand:</string>
    <string name="content_fragment_editor_transport_doc_btn_save_transport_doc">Speichern</string>
    <string name="content_fragment_editor_transport_doc_btn_edit_transport_doc">Bearbeiten</string>
    <string name="hint_fragment_editor_transport_doc_et_insurance_number">Vers.-nummer</string>
    <string name="hint_fragment_editor_transport_doc_et_start_date">Startdatum</string>
    <string name="hint_fragment_editor_transport_doc_et_end_date">Enddatum</string>
    <string name="hint_fragment_editor_transport_doc_et_weekly_frequency">Fahrten pro Woche</string>
    <string name="hint_fragment_editor_transport_doc_tv_service_provider">Behandlungsstätte</string>
    <string name="hint_fragment_editor_transport_doc_et_info">Weitere Informationen</string>

    <!-- Strings for TransportCreateEditor -->
    <string name="content_fragment_editor_transport_create_tv_transport_data">Transportdaten</string>
    <string name="hint_fragment_editor_transport_create_et_transport_doc_id">Transportschein ID</string>
    <string name="hint_fragment_editor_transport_create_et_transport_date">Transportdatum</string>
    <string name="content_fragment_editor_transport_create_btn_save_transport">Speichern</string>

    <!-- Strings for TransportUpdateEditor -->
    <string name="content_fragment_editor_transport_update_tv_transport_data">Transportdaten</string>
    <string name="content_fragment_editor_transport_update_tb_direction">Fahrtrichtung</string>
    <string name="content_on_fragment_editor_transport_update_tb_direction">Rückfahrt</string>
    <string name="content_off_fragment_editor_transport_update_tb_direction">Hinfahrt</string>
    <string name="content_fragment_editor_transport_update_tv_address_start">Startadresse</string>
    <string name="content_fragment_editor_transport_update_tv_address_end">Zieladresse</string>
    <string name="content_off_fragment_editor_transport_update_tv_patient_condition">Patientenzustand</string>
    <string name="content_off_fragment_editor_transport_update_tv_payment_exemption">Zuzahlungsbefreiung</string>
    <string name="content_off_fragment_editor_transport_update_cb_payment_exemption">Gültiger Zuzahlungsbefreiungsausweis für den Zeitraum der Krankenbeförderung wurde vorgelegt</string>


    <string name="hint_fragment_editor_transport_update_et_tour_number">Auftragsnummer</string>
    <string name="hint_fragment_editor_transport_update_et_address_street">Straße</string>
    <string name="hint_fragment_editor_transport_update_et_address_house_number">Nr.</string>
    <string name="hint_fragment_editor_transport_update_et_address_zip_code">PLZ</string>
    <string name="hint_fragment_editor_transport_update_et_address_city">Stadt</string>





    <!-- Strings for TransportAssign -->
    <string name="content_fragment_assign_transport_btn_self_assign">Selbst zuweisen</string>
    <string name="content_fragment_assign_transport_tv_assign_transport">Transport zuweisen</string>
    <string name="desc_fragment_assign_transport_iv_qr_code">Zeigt den zu scannenden QR-Code</string>

    <!-- Strings for RecyclerView for TransportDocuments -->
    <string name="content_recyclerview_transport_document_row_tv_service_provider_info">Behandlungsstätte:</string>

    <!-- Strings for RecyclerView for Transports -->
    <string name="content_recyclerview_transport_row_tv_service_provider_info">Behandlungsstätte:</string>
    <string name="content_recyclerview_transport_row_tv_date_info">Datum:</string>
    <string name="content_recyclerview_transport_row_tv_transport_provider">Transportdienstleister:</string>


    <string name="title_popup_transport_already_assigned">Ungültiger Vorgang!</string>
    <string name ="content_popup_transport_already_assigned">Der Transport wurde bereits einem anderen Transportdienstleister zugefügt!</string>

    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>