<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.EditorTransportUpdateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="150dp">

            <TextView
                android:id="@+id/tv_transport_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_fragment_editor_transport_update_tv_transport_data"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_transport_date"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/hint_fragment_editor_transport_create_et_transport_date"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:textAlignment="center"
                    tools:ignore="Deprecated" />

                <EditText
                    android:id="@+id/et_tour_number"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:editable="false"
                    android:hint="@string/hint_fragment_editor_transport_update_et_tour_number"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:textAlignment="center"
                    tools:ignore="Deprecated,TextFields" />

            </LinearLayout>

            <ToggleButton
                android:id="@+id/tb_direction"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/content_fragment_editor_transport_update_tb_direction"
                android:textOff="@string/content_off_fragment_editor_transport_update_tb_direction"
                android:textOn="@string/content_on_fragment_editor_transport_update_tb_direction" />

            <TextView
                android:id="@+id/tv_address_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_fragment_editor_transport_update_tv_address_start"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/et_address_start_street"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_fragment_editor_transport_update_et_address_street"
                    android:importantForAutofill="no"
                    android:inputType="text|textPostalAddress" />

                <EditText
                    android:id="@+id/et_address_start_housenumber"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_fragment_editor_transport_update_et_address_house_number"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/et_address_start_zipcode"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_fragment_editor_transport_update_et_address_zip_code"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="5" />

                <EditText
                    android:id="@+id/et_address_start_city"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_fragment_editor_transport_update_et_address_city"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_address_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_fragment_editor_transport_update_tv_address_end"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/et_address_end_street"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_fragment_editor_transport_update_et_address_street"
                    android:importantForAutofill="no"
                    android:inputType="text|textPostalAddress" />

                <EditText
                    android:id="@+id/et_address_end_housenumber"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_fragment_editor_transport_update_et_address_house_number"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/et_address_end_zipcode"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_fragment_editor_transport_update_et_address_zip_code"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="5" />

                <EditText
                    android:id="@+id/et_address_end_city"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_fragment_editor_transport_update_et_address_city"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_patient_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_off_fragment_editor_transport_update_tv_patient_condition"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_patient_condition"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/linearLayout_payment_exemption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_payment_exemption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_off_fragment_editor_transport_update_tv_payment_exemption"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cb_payment_exemption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_off_fragment_editor_transport_update_cb_payment_exemption" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">

                <Button
                    android:id="@+id/btn_save_transportdoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_fragment_editor_transport_doc_btn_save_transport_doc"
                    app:layout_constraintEnd_toEndOf="@+id/constraint_save"
                    app:layout_constraintStart_toStartOf="@+id/constraint_save"
                    app:layout_constraintTop_toTopOf="@+id/constraint_save" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_edit_transportdoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_fragment_editor_transport_doc_btn_edit_transport_doc"
                    app:layout_constraintEnd_toEndOf="@+id/constraint_edit"
                    app:layout_constraintStart_toStartOf="@+id/constraint_edit"
                    app:layout_constraintTop_toTopOf="@+id/constraint_edit"
                    tools:layout_editor_absoluteX="30dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>